--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chart.js": "^2.7.0"
+    "chart.js": "^2.7.0",
+    "chartjs-plugin-datasource-prometheus": "1.0.10"
   }
 }
